--- a/recipes/configs/llama2/7B_lora_dpo_single_device.yaml
+++ b/recipes/configs/llama2/7B_lora_dpo_single_device.yaml
@@ -30,16 +30,21 @@ tokenizer:
   _component_: torchtune.models.llama2.llama2_tokenizer
   path: /tmp/Llama-2-7b-hf/tokenizer.model
 
+#checkpointer:
+#  _component_: torchtune.utils.FullModelHFCheckpointer
+#  checkpoint_dir: /tmp/Llama-2-7b-hf
+#  checkpoint_files: [
+#    pytorch_model-00001-of-00002.bin,
+#    pytorch_model-00002-of-00002.bin
+#  ]
+#  adapter_checkpoint: null
+#  recipe_checkpoint: null
+#  output_dir: /tmp/Llama-2-7b-hf
+#  model_type: LLAMA2
 checkpointer:
-  _component_: torchtune.utils.FullModelHFCheckpointer
-  checkpoint_dir: /tmp/Llama-2-7b-hf
-  checkpoint_files: [
-    pytorch_model-00001-of-00002.bin,
-    pytorch_model-00002-of-00002.bin
-  ]
-  adapter_checkpoint: null
-  recipe_checkpoint: null
-  output_dir: /tmp/Llama-2-7b-hf
+  _component_: torchtune.utils.TensorDictCheckpointer
+  checkpoint_dir: /tmp/Llama-2-7b-td
+  output_dir: /tmp/Llama-2-7b-td
   model_type: LLAMA2
 resume_from_checkpoint: False
 
